[package]
name = "baskin-neon-js"
version = "0.1.0"
authors = ["Jamie Blondin <jblondin@gmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "baskin_neon_js"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
neon = "0.10.1"
baskin-rs = { path = "../../baskin-rs" }